<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="about">About this film</string>
    <string name="info">Info film</string>
    <string name="status">Status</string>
    <string name="rating">Rating</string>
    <string name="duration">Duration</string>
    <string name="language">Language</string>
    <string name="cast_and_credit"><![CDATA[Cast & Credit]]></string>
    <string name="actors">Actors</string>
    <string name="crew">Crew</string>
    <string name="detail">Detail</string>
    <string name="change_language">Change Language</string>
    <string-array name="title_movie">
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bumblebee</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Venom</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Ralph Breaks the Internet</item>
        <item>Alita: Battle Angel</item>
    </string-array>
    <string-array name="date_movie">
        <item>December 7, 2018</item>
        <item>April 25, 2018</item>
        <item>December 15, 2018</item>
        <item>December 11, 2018</item>
        <item>January 3, 2019</item>
        <item>December 14, 2018</item>
        <item>September 28, 2018</item>
        <item>December 6, 2018</item>
        <item>November 20, 2018</item>
        <item>January 31, 2019</item>
    </string-array>
    <string-array name="status_movie">
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
    </string-array>
    <string-array name="language_movie">
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>Japanese</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
    </string-array>
    <string-array name="actors_movie">
        <item>Jason Momoa, Amber Heard, Willem Dafoe, Patrick Wilson, Nicole Kidman</item>
        <item>Robert Downey, Chris Hemsworth, Chris Evans, Mark Ruffalo, Scarlett Johansson</item>
        <item>Hailee Steinfeld, Jorge Lendeborg, John Cena, Jason Ian Drucker, Pamela Adlon</item>
        <item>Ryan Reynolds, Fred Savage, Josh Brolin, Morena Baccarin, Julian Dennison</item>
        <item>Jay Baruchel, America Ferrera, F. Murray Abraham, Cate Blanchett, Gerard Butler</item>
        <item>Masako Nozawa, Ryou Horikawa, Bin Shimada, Ryusei Nakao, Banjou Ginga</item>
        <item>Tom Hardy, Michelle Williams, Riz Ahmed, Scott Haze, Reid Scott</item>
        <item>Shameik Moore, Jake Johnson, Hailee Steinfeld, Mahershala Ali, Brian Tyree Henry</item>
        <item>John C. Reilly, Sarah Silverman, Gal Gadot, Taraji P. Henson, Jack McBrayer</item>
        <item>Rosa Salazar, Christoph Waltz, Mahershala Ali, Keean Johnson, Jennifer Connelly</item>
    </string-array>
    <string-array name="crew_movie">
        <item>James Wan, Will Beall, Mort Weisinger, Paul Norris</item>
        <item>Joe Russo, Anthony Russo, Stephen McFeely, Christopher Markus</item>
        <item>Christina Hodson, Travis Knight</item>
        <item>David Leitch, Paul Wernick, Ryan Reynolds, Rhett Reese</item>
        <item>Dean DeBlois, Cressida Cowell</item>
        <item>Akira Toriyama, Tatsuya Nagamine</item>
        <item>Mike Zeck, David Michelinie, Todd McFarlane, Ruben Fleischer, Kelly Marcel, Jeff Pinkner, Scott Rosenberg</item>
        <item>Rodney Rothman, Phil Lord, Steve Ditko, Stan Lee, Bob Persichetti, Peter Ramsey</item>
        <item>Phil Johnston, Rich Moore, Pamela Ribon, Josie Trinidad, Jim Reardon</item>
        <item>Robert Rodriguez, Laeta Kalogridis, James Cameron</item>
    </string-array>
    <string-array name="duration_movie">
        <item>2h 24m</item>
        <item>2h 29m</item>
        <item>1h 54m</item>
        <item>1h 57m</item>
        <item>1h 44m</item>
        <item>1h 41m</item>
        <item>1h 52m</item>
        <item>1h 57m</item>
        <item>1h 52m</item>
        <item>2h 2m</item>
    </string-array>
    <string-array name="genre_movie">
        <item>Action, Adventure, Fantasy</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Comedy, Action</item>
        <item>Animation, Family, Adventure</item>
        <item>Action, Animation, Fantasy</item>
        <item>Science Fiction, Action</item>
        <item>Action, Adventure, Animation</item>
        <item>Animation, Action, Comedy</item>
        <item>Action, Science Fiction, Adventure</item>
    </string-array>
    <string-array name="overview_movie">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne</item>

        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>

        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>

        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder and zero F\'s.</item>

        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup\’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>

        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called \'Broly\' who they\'ve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so what\'s this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>

        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>

        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>

        <item>Video game bad guy Ralph and fellow misfit Vanellope von Schweetz must risk it all by traveling to the World Wide Web in search of a replacement part to save Vanellope\'s video game, \"Sugar Rush.\" In way over their heads, Ralph and Vanellope rely on the citizens of the internet — the netizens — to help navigate their way, including an entrepreneur named Yesss, who is the head algorithm and the heart and soul of trend-making site BuzzzTube.</item>

        <item>When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</item>
    </string-array>
    <string-array name="title_tv">
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>Naruto Shippuden</item>
        <item>NCIS</item>
        <item>Shameless</item>
        <item>Supergirl</item>
        <item>The Simpsons</item>
        <item>Riverdale</item>
        <item>Grey\'s Anatomy</item>
    </string-array>
    <string-array name="date_tv">
        <item>February 26, 1986</item>
        <item>October 12, 2009</item>
        <item>January 31, 1999</item>
        <item>February 15, 2007</item>
        <item>September 23, 2003</item>
        <item>January 9, 2011</item>
        <item>October 26, 2015</item>
        <item>December 17, 1989</item>
        <item>January 26, 2017</item>
        <item>March 27, 2005</item>
    </string-array>
    <string-array name="status_tv">
        <item>Ended</item>
        <item>Returning Series</item>
        <item>Returning Series</item>
        <item>Ended</item>
        <item>Returning Series</item>
        <item>Returning Series</item>
        <item>Returning Series</item>
        <item>Returning Series</item>
        <item>Returning Series</item>
        <item>Returning Series</item>
    </string-array>
    <string-array name="language_tv">
        <item>Japanese</item>
        <item>Japanese</item>
        <item>English</item>
        <item>Japanese</item>
        <item>English</item>
        <item>Japanese</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
    </string-array>
    <string-array name="actors_tv">
        <item>Masako Nozawa, Mayumi Tanaka, Hiromi Tsuru, Tōru Furuya, Naoki Tatsuta</item>
        <item>Tetsuya Kakihara, Aya Hirano, Rie Kugimiya, Yuichi Nakamura, Hatano Wataru</item>
        <item>Seth MacFarlane, Alex Borstein, Mila Kunis, Seth Green, Alec Sulkin</item>
        <item>Junko Takeuchi, Chie Nakamura, Kazuhiko Inoue, Jouji Nakata, Akira Ishida</item>
        <item>David McCallum, Brian Dietzen, Sean Murray, Mark Harmon, Pauley Perrette</item>
        <item>Emmy Rossum, William H. Macy, Ethan Cutkosky, Shanola Hampton, Jeremy Allen White</item>
        <item>Melissa Benoist, Chyler Leigh, David Harewood, Mehcad Brooks, Jeremy Jordan</item>
        <item>Dan Castellaneta, Julie Kavner, Nancy Cartwright, Yeardley Smith, Harry Shearer</item>
        <item>K.J. Apa, Camila Mendes, Lili Reinhart, Cole Sprouse, Madelaine Petsch</item>
        <item>Ellen Pompeo, Justin Chambers, James Pickens, Chandra Wilson, Patrick Dempsey</item>
    </string-array>
</resources>